# rough-rs

./: .gitignore  Cargo.toml  README.md  layout.kdl  rustfmt.toml
kurbo_rough/: Cargo.toml
kurbo_rough/examples/: rectangle.rs
kurbo_rough/src/: kurbo_generator.rs  lib.rs
points_on_curve/: Cargo.toml  README.md
points_on_curve/examples/: tolerance.rs
points_on_curve/src/: lib.rs
rough/: Cargo.toml
rough/src/: core.rs  generator.rs  geometry.rs  lib.rs  points_on_path.rs  renderer.rs
rough/src/filler/: mod.rs  scan_line_hachure.rs  traits.rs
rough_iced/: Cargo.toml  README.md
rough_iced/examples/: arc.rs  drawing_app.rs
rough_iced/src/: iced_generator.rs  lib.rs
rough_piet/: Cargo.toml  README.md
rough_piet/examples/: arc.rs  bezier_cubic.rs  bezier_quadratic.rs  circle.rs  curve.rs  curve_fill.rs  ellipse.rs  heart_svg_path.rs  linear_path.rs  polygon.rs  rectangle.rs  rotate.rs  rust_logo.rs  rust_logo_alpha.rs  scale.rs  skew.rs  skewy.rs  stroke_style.rs  text.rs  translate.rs
rough_piet/src/: kurbo_generator.rs  lib.rs
rough_plotters_svg/: Cargo.toml  README.md
rough_plotters_svg/examples/: all_fill_styles.rs  area_chart.rs  chart.rs  histogram.rs  showcase.rs  stock.rs
rough_plotters_svg/src/: lib.rs
rough_tiny_skia/: Cargo.toml
rough_tiny_skia/examples/: rectangle.rs  rectangle_alpha.rs
rough_tiny_skia/src/: lib.rs  skia_generator.rs
rough_vello/: Cargo.toml  README.md
rough_vello/examples/: animate.rs  rectangle.rs  rectangle_vello.rs  rust_logo.rs
rough_vello/src/: lib.rs  vello_generator.rs
roughr/: Cargo.toml  README.md
roughr/src/: core.rs  generator.rs  geometry.rs  lib.rs  points_on_path.rs  renderer.rs
roughr/src/filler/: dashed_filler.rs  dot_filler.rs  hatch_filler.rs  mod.rs  scan_line_hachure.rs  traits.rs  zig_zag_filler.rs  zig_zag_line_filler.rs
svg_path_ops/: Cargo.toml  LICENSE  README.md
svg_path_ops/src/: a2c.rs  bbox.rs  ellipse.rs  lib.rs  path_transformer.rs  pt.rs
text_to_svg/: Cargo.toml
text_to_svg/src/: lib.rs  options.rs  outlinebuilder.rs  xmlwriterext.rs
