[package]
name = "kurbo_rough"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rough = {path = "../rough"}
num-traits = "0.2"
euclid = "0.22"
kurbo = "0.8.3"

[dev-dependencies]
piet-common = {version = "*", features = ["png"]}
piet = "*"
rand = "*"
rand_distr = "*"