[package]
name = "points_on_curve"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
num-traits = "0.2"

[dev-dependencies]
piet-common = {version = "*", features = ["png"]}
piet = "0.5"