[package]
name = "rough"
version = "0.1.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Generate Hand Sketched 2D Drawings"
repository = "https://github.com/orhanbalci/rough-rs.git"
homepage = "https://github.com/orhanbalci"
keywords = ["graphics", "bezier", "sketch", "2D"]
categories = ["Graphics"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
points_on_curve = {path = "../points_on_curve", version = "0.1.0"}
euclid = "0.22"
rand = "0.8"
num-traits = "0.2"
derive_builder = "*"
svgtypes = "0.8"

[dev-dependencies]
plotlib = "0.5"
