[package]
name = "rough_iced"
version = "0.12.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Draw Hand Sketched 2D Drawings Using Iced"
repository = "https://github.com/orhanbalci/rough-rs.git"
homepage = "https://github.com/orhanbalci"
keywords = ["graphics", "bezier", "sketch", "2D", "iced"]
categories = ["graphics"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_core = { version = "0.13" }
iced_widget = { version = "0.13", features = ["canvas"] }
euclid = "0.22"
palette = "0.7"
roughr = { path = "../roughr", version = "0.12.0" }
num-traits = "0.2"

[dev-dependencies]
iced = { version = "0.13", features = ["canvas"] }
svg_path_ops = { path = "../svg_path_ops", version = "0.11.0" }
