[package]
name = "rough_piet"
version = "0.1.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Draw Hand Sketched 2D Drawings Using Piet"
repository = "https://github.com/orhanbalci/rough-rs.git"
homepage = "https://github.com/orhanbalci"
keywords = ["graphics", "bezier", "sketch", "2D", "piet"]
categories = ["Graphics"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rough = {path = "../rough", version = "0.1.0"}
num-traits = "0.2"
euclid = "0.22"
piet = "0.5"

[dev-dependencies]
piet-common = {version = "*", features = ["png"]}
rand = "*"
rand_distr = "*"