[package]
name = "rough_piet"
version = "0.3.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Draw Hand Sketched 2D Drawings Using Piet"
repository = "https://github.com/orhanbalci/rough-rs.git"
homepage = "https://github.com/orhanbalci"
keywords = ["graphics", "bezier", "sketch", "2D", "piet"]
categories = ["graphics"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roughr = {path = "../roughr", version = "0.3.0"}
num-traits = "0.2"
euclid = "0.22"
piet = "0.5"
palette = "0.6"

[dev-dependencies]
piet-common = {version = "0.5", features = ["png"]}
rand = "0.8"
rand_distr = "0.4"
