[package]
name = "rough_plotters_svg"
version = "0.2.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Draw Hand Sketched 2D Charts and Plots Using Plotters"
repository = "https://github.com/orhanbalci/rough-rs.git"
homepage = "https://github.com/orhanbalci"
keywords = ["graphics", "plotting", "charts", "sketch", "svg"]
categories = ["graphics", "visualization"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-svg = "0.3.7"
plotters-backend = "0.3.7"
roughr = { path = "../roughr", version = "0.12.0" }
euclid = "0.22"
num-traits = "0.2"
palette = "0.7"

[dev-dependencies]
plotters = "0.3.7"
rand = "0.8"
rand_distr = "0.4"
rand_xorshift = "0.3"
chrono = "0.4"
