[package]
name = "rough_tiny_skia"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roughr = {path = "../roughr", version = "0.3.0"}
num-traits = "0.2"
euclid = "0.22"
palette = "0.6"
tiny-skia = "0.8"
