[package]
name = "rough_tiny_skia"
version = "0.9.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Draw Hand Sketched 2D Drawings Using tiny-skia"
repository = "https://github.com/orhanbalci/rough-rs.git"
homepage = "https://github.com/orhanbalci"
keywords = ["graphics", "bezier", "sketch", "2D", "piet"]
categories = ["graphics"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roughr = {path = "../roughr", version = "0.9.0"}
num-traits = "0.2"
euclid = "0.22"
palette = "0.7"
tiny-skia = "0.11"
