[package]
name = "roughr"
version = "0.3.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "Generate Hand Sketched 2D Drawings"
repository = "https://github.com/orhanbalci/rough-rs.git"
homepage = "https://github.com/orhanbalci"
keywords = ["graphics", "bezier", "sketch", "2D"]
categories = ["Graphics"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
points_on_curve = {path = "../points_on_curve", version = "0.2.0"}
svg_path_ops = {path= "../svg_path_ops", version = "0.2.0"}
euclid = "0.22"
rand = "0.8"
num-traits = "0.2"
derive_builder = "0.11"
svgtypes = "0.8"
palette = "0.6"

[dev-dependencies]
plotlib = "0.5"
